--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
-Flask==3.0.0
-Flask-CORS==4.0.0
-Flask-SQLAlchemy==3.1.1
-gunicorn==21.2.0
+fastapi==0.104.1
+uvicorn==0.24.0
+sqlalchemy==2.0.23
+pydantic==2.5.0
 python-dotenv==1.0.0
-psycopg2==2.9.9  # Use regular psycopg2, not binary
+psycopg2-binary==2.9.9 
