--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -2,12 +2,19 @@ services:
   - type: web
     name: Inventory_Management
     runtime: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+
+    
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.9
+
       - key: DATABASE_URL
         fromDatabase:
           name: inventory_db
           property: connectionString
+
+    buildCommand: pip install -r requirements.txt
+    startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
+
     healthCheckPath: /api/health
     autoDeploy: true
